test/compile-fail/scope/use-no-name-root-path/top.rhdl
mod a {
    mod b {
        struct c {}
        use ::c;
    }
}
